Support for RESTful service implementations (no client yet)
- add support to XML binding when Provider is using Source
- allow processing of incoming messageto continue when no message is available
- infer service/port names from publish address when no wsdl is available
- put http method, path info and query string in message context
- allow endpoint to publish provider which is not using a wsdl	


git-svn-id: https://svn.apache.org/repos/asf/incubator/cxf/trunk@435966 13f79535-47bb-0310-9956-ffa450edef68