@@ -39,27 +39,31 @@ public class InitParamResourceResolver implements ResourceResolver {
         char, byte, short, long, float, double, boolean
         */
         T ret = null;
-        if (String.class.equals(type)) {
-            ret = type.cast(value);
-        } else if (Integer.class.equals(type) || Integer.TYPE.equals(type)) {
-            ret =  type.cast(new Integer(value));
-        } else if (Byte.class.equals(type) || Byte.TYPE.equals(type)) {
-            ret = type.cast(new Byte(value));
-        } else if (Short.class.equals(type) || Short.TYPE.equals(type)) {
-            ret = type.cast(new Short(value));
-        } else if (Long.class.equals(type) || Long.TYPE.equals(type)) {
-            ret =  type.cast(new Long(value));
-        } else if (Float.class.equals(type) || Float.TYPE.equals(type)) {
-            ret = type.cast(new Float(value));
-        } else if (Double.class.equals(type) || Double.TYPE.equals(type)) {
-            ret = type.cast(new Double(value));
-        } else if (Boolean.class.equals(type) || Boolean.TYPE.equals(type)) {
-            ret = type.cast(Boolean.valueOf(value));
-        } else if (Character.class.equals(type) || Character.TYPE.equals(type)) {
-            ret = type.cast(value.charAt(0));
-        } else {
-            LOG.severe("do not know how to treat type: " + type);
-        } 
+        try { 
+            if (String.class.equals(type)) {
+                ret = type.cast(value);
+            } else if (Integer.class.equals(type) || Integer.TYPE.equals(type)) {
+                ret =  type.cast(Integer.valueOf(value));
+            } else if (Byte.class.equals(type) || Byte.TYPE.equals(type)) {
+                ret = type.cast(Byte.valueOf(value));
+            } else if (Short.class.equals(type) || Short.TYPE.equals(type)) {
+                ret = type.cast(Short.valueOf(value));
+            } else if (Long.class.equals(type) || Long.TYPE.equals(type)) {
+                ret =  type.cast(Long.valueOf(value));
+            } else if (Float.class.equals(type) || Float.TYPE.equals(type)) {
+                ret = type.cast(Float.valueOf(value));
+            } else if (Double.class.equals(type) || Double.TYPE.equals(type)) {
+                ret = type.cast(Double.valueOf(value));
+            } else if (Boolean.class.equals(type) || Boolean.TYPE.equals(type)) {
+                ret = type.cast(Boolean.valueOf(value));
+            } else if (Character.class.equals(type) || Character.TYPE.equals(type)) {
+                ret = type.cast(value.charAt(0));
+            } else {
+                LOG.severe("do not know how to treat type: " + type);
+            } 
+        } catch (NumberFormatException ex) {
+            LOG.severe("badly formed init param: " + value);
+        }
         return ret;
     }
 }
